Fixed scrolling problem by removing overflow-x: hidden

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -4,7 +4,6 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   font-family: 'Actor', sans-serif;
 }
 header {
